login container mobile

--- a/src/styles/loginPage.module.css
+++ b/src/styles/loginPage.module.css
@@ -56,6 +56,6 @@
   .loginPageContainer {
     width: 90%;
     margin: 40% auto 0;
-    background-color: #91c4d4;
+    background-color: #5fc3e2;
   }
 }
