--- a/src/pages/AdminDashboard/Doctor/Doctor.module.css
+++ b/src/pages/AdminDashboard/Doctor/Doctor.module.css
@@ -2,6 +2,74 @@
     display: flex;
 }
 
-.bodyContent {
-    background-color: red;
+.content .navLink {
+    background-color: #237fea;
+    font-weight: 600;
+    color: white;
+}
+
+.searchNextDiv {
+    margin: 2% 0 1%;
+}
+
+.searchNextDiv div {
+    padding: 0;
+}
+
+.searchDiv input {
+    width: 60%;
+    font-size: .9rem;
+    color: grey;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+}
+
+.searchDiv button {
+    color: white;
+}
+
+.nextPageDiv {
+    text-align: end;
+}
+
+.nextPageDiv p {
+    font-size: .8rem;
+    display: inline;
+    margin: auto auto auto 2%;
+    line-height: 3rem;
+}
+
+.nextPageSpan {
+    background-color: #237fea;
+    color: white;
+    border-radius: 6px;
+    padding: .5% 1%;
+}
+
+.nextPrevIcon {
+    cursor: pointer;
+}
+
+.contentTable {
+    width: 100%;
+    height: 30vh;
+    border-radius: 12px;
+}
+
+.contentTableHead {
+    background-color: #237fea;
+    border-radius: 12px 12px 0 0;
+    padding: 1%;
+color: white;
+}
+
+.contentTableBody {
+    padding: 1%;
+    border-bottom: .5px solid #f5f5f5;
+}
+
+.contentTableBody button {
+    border-radius: 12px;
+    margin: 0 1%;
+    padding: 1% 5% 2%;
+    font-size: .8rem;
 }
