--- a/src/pages/AdminDashboard/Styles.module.css
+++ b/src/pages/AdminDashboard/Styles.module.css
@@ -8,6 +8,9 @@
     color: white;
 }
 
+
+/* content search next div start */
+
 .searchNextDiv {
     margin: 2% 0 1%;
 }
@@ -49,9 +52,14 @@
     cursor: pointer;
 }
 
+/* content search next div end  */
+
+
+
+/* content table start */
+
 .contentTable {
     width: 100%;
-    height: 30vh;
     border-radius: 12px;
 }
 
@@ -64,13 +72,57 @@
 }
 
 .contentTableBody {
-    padding: 1%;
+    padding: 2% 1%;
     border-bottom: .5px solid #f5f5f5;
 }
 
-.contentTableBody button {
-    border-radius: 12px;
-    margin: 0 1%;
-    padding: 1% 5% 2%;
-    font-size: .8rem;
+.contentTableBody:hover {
+    background-color: #e7e7ee;
 }
+
+
+.penIcon {
+    color: #237fea;
+    cursor: pointer;
+}
+
+.penIcon:hover {
+    color: #0077ff;
+    box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+}
+
+.binIcon {
+    color: #ff7e54;
+    cursor: pointer;
+    margin: 0 0 0 1rem;
+}
+
+.binIcon:hover {
+    color: #fc4103;
+    box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+}
+
+/* content table end  */
+
+
+/* form start  */
+
+.formColDiv {
+    margin: 1% auto auto;
+}
+
+.formColDiv label {
+   font-size: .9rem;
+   font-weight: 500;
+}
+
+.formButtonDiv {
+    margin: 1% 0 0;
+}
+
+.formButtonDiv button {
+    font-size: .8rem;
+    font-weight: 600;
+}
+
+/* form end  */
