--- a/src/pages/AdminDashboard/Styles.module.css
+++ b/src/pages/AdminDashboard/Styles.module.css
@@ -2,15 +2,10 @@
     display: flex;
 }
 
-.navItem {
-    padding: 0;
-    }
-
 .content .navLink {
     background-color: #237fea;
     font-weight: 600;
     color: white;
-    border-radius: 50%;
 }
 
 
@@ -141,16 +136,52 @@
     }
 
     .nextPageSpan {
-    background-color: #237fea;
-    color: white;
-    border-radius: 6px;
     padding: .1% 2% 1%;
 }
 }
 
 
 /* start of medium tablet styles */
-@media screen and (max-width: 767px) {} 
+@media screen and (max-width: 767px) {
+.content {
+    margin: 5% auto auto;
+}
+
+.searchDiv form input, .searchDiv form button {
+    height: 2.5rem;
+}
+
+    .formColDiv {
+        margin: 3% auto auto;
+    }
+
+    .formButtonDiv {
+        margin: 1% 0 0;
+    }
+    } 
 
 /* start of phone styles */
-@media screen and (max-width: 479px) {}
+@media screen and (max-width: 479px) {
+    .searchNextDiv {
+        margin: 2% 0 5%;
+    }
+    
+
+    .searchDiv form input, .searchDiv form button {
+        height: 2rem;
+        box-shadow: none;
+    }   
+    
+    .searchDiv form input {
+        width: 80%;
+    }
+    
+    .searchDiv form button {
+        width: 20%;
+    }
+
+    .nextPageDiv p {
+    margin: 0;
+    line-height: 0;
+}
+}
