--- a/src/pages/DoctorDashboard/Styles.module.css
+++ b/src/pages/DoctorDashboard/Styles.module.css
@@ -86,6 +86,10 @@
     cursor: pointer;
 }
 
+.historyIcon {
+    font-size: 1.5rem;
+}
+
 .historyIcon:hover, .penIcon:hover {
     color: #0077ff;
     box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
@@ -211,4 +215,9 @@
     .formButtonDiv {
         margin: 3% 0 0;
     }
+    
+    .historyIcon {
+        font-size: 1.2rem;
+    }
+
 }
