--- a/src/pages/DoctorDashboard/Styles.module.css
+++ b/src/pages/DoctorDashboard/Styles.module.css
@@ -154,6 +154,49 @@
 
 
 
+/* Bio data page start */
+.bioDataBody {
+    border-radius: 12px;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    padding: 5%;
+}
+
+.bioDataBody h4 {
+  margin: 0 0 3%;   
+}
+
+.bioDataBody p {
+    font-weight: 500;
+    text-align: justify;
+    padding: 2% 0;
+}
+
+.bioDataDetails {
+    margin: 3% 0;
+    border-radius: 12px;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    padding: 5%;
+    display: flex;
+    flex-wrap: wrap; /* Allow wrapping to the next line */
+    justify-content: space-between;
+    align-items: center;
+}
+
+.bioDataDetails button {
+    margin: 1%;
+    display: inline-block;
+}
+
+
+
+
+/* Bio data page end */
+
+
+
+
 /* start of pc styles */
 @media screen and (max-width: 991px) {
     .content .navLink {
