--- a/src/pages/DoctorDashboard/Styles.module.css
+++ b/src/pages/DoctorDashboard/Styles.module.css
@@ -159,7 +159,7 @@
     border-radius: 12px;
     border: none;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    padding: 5%;
+    padding: 3% 5%;
 }
 
 .bioDataBody h4 {
@@ -173,11 +173,11 @@
 }
 
 .bioDataDetails {
-    margin: 3% 0;
+    margin: 2% 0;
     border-radius: 12px;
     border: none;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    padding: 5%;
+    padding: 3% 5%;
     display: flex;
     flex-wrap: wrap; /* Allow wrapping to the next line */
     justify-content: space-between;
