--- a/src/pages/DoctorDashboard/Styles.module.css
+++ b/src/pages/DoctorDashboard/Styles.module.css
@@ -188,10 +188,6 @@
     margin: 1%;
     display: inline-block;
 }
-
-
-
-
 /* Bio data page end */
 
 
@@ -270,4 +266,27 @@
         font-size: 1.2rem;
     }
 
+    /* Bio data page start */
+    .bioDataBody {
+        padding: 8% 5% 5%;
+    }
+
+    .bioDataBody p {
+        padding: 2% 0 0;
+    }
+
+    .bioDataDetails {
+        margin: 5% 0 2%;
+        padding: 5%;
+        display: grid;
+        grid-template-columns: 1fr; /* Set the column to 100% width */
+        justify-content: start;
+    }
+    
+    .bioDataDetails button {
+        margin: 2% 0;
+        display: inline-block;
+        width: 100%;
+    }
+    
 }
