--- a/src/pages/DoctorDashboard/Styles.module.css
+++ b/src/pages/DoctorDashboard/Styles.module.css
@@ -80,6 +80,10 @@
     background-color: #e7e7ee;
 }
 
+.contentTableBody a {
+    color: black;
+    text-decoration: none;
+}
 
 .historyIcon, .penIcon {
     color: #237fea;
