--- a/src/pages/DoctorDashboard/Profile/Profile.module.css
+++ b/src/pages/DoctorDashboard/Profile/Profile.module.css
@@ -1,65 +1,64 @@
 .body {
-    display: flex;
+  display: flex;
 }
 
 .profilePicture {
-    width: 100%;
-    height: auto;
-    border-radius: 50%;
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
 }
 
 .profilePictureInput {
-    display: none;
+  display: none;
 }
 
 .userDetailsDiv {
-    background-color: #e7e7e7;
-    border-radius: 12px;
-    padding: 2% 3%;
+  background-color: #e7e7e7;
+  border-radius: 12px;
+  padding: 2% 3%;
 }
 
 .formColDiv {
-    margin: .5% 0;
+  margin: 0.5% 0;
 }
 
 .formColDiv label,
 .formButtonDiv button {
-    font-size: .9rem;
-    font-weight: 600;
+  font-size: 0.9rem;
+  font-weight: 600;
 }
 
 .formButtonDiv button {
-    margin: 1% 0 0;
+  margin: 1% 0 0;
 }
 
 .updateDetailsDiv {
-    margin: 2% auto auto;
+  margin: 2% auto auto;
 }
 
 /* start of pc styles */
 @media screen and (max-width: 991px) {
-    .userDetailsDiv {
-        padding: 2% 3% 4%;
-    }
+  .userDetailsDiv {
+    padding: 2% 3% 4%;
+  }
 
-    .formButtonDiv button {
-        margin: 3% 0 0;
-    }
+  .formButtonDiv button {
+    margin: 3% 0 0;
+  }
 }
-
 
 /* start of medium tablet styles */
 @media screen and (max-width: 767px) {
-    .profilePicture {
+  .profilePicture {
     width: 40%;
     margin: 5% 30%;
-}
+  }
 }
 
 /* start of phone styles */
 @media screen and (max-width: 479px) {
-    .profilePicture {
-        width: 40%;
-        margin: 5% 30%;
-    }
+  .profilePicture {
+    width: 40%;
+    margin: 5% 30%;
+  }
 }
